--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       a {
         color: red;
       }
-      #orange-crush {
+      #warn-crush {
         background-color: orange;
       }
       #exec-bio {
@@ -19,7 +19,7 @@
       .bio-box a {
         color: green;
       }
-      .azure-box {
+      .chill-box {
         background-color: azure;
       }
     </style>
@@ -27,7 +27,7 @@
   <body>
     <h1>I'm an h1</h1>
     <ul>
-      <li id="orange-crush">
+      <li id="warn-crush">
         <a href="http://example.com/">Link</a>
       </li>
       <li>
@@ -38,16 +38,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box azure-box">
+    <div id="exec-bio" class="bio-box chill-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box azure-box">
+    <div class="bio-box chill-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box azure-box">
+    <div class="bio-box chill-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box azure-box">
+    <div class="bio-box chill-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
