--- a/index.html
+++ b/index.html
@@ -5,45 +5,68 @@
     <meta charset="utf-8">
     <style>
       /* GLOBAL STYLES */
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        font-size: 62.5%;
+      }
+      h1 {
+        font-size: 20px;
+        margin-top: 0;
+      }
       a {
         color: rgba(255, 0, 0, 0.2);
       }
 
-      h2 {
-        font-size: 30px;
+      /* HERO STYLES */
+      .full-hero{
+        background-color: #c7dbfc;
+        height: 50vw;
+        width: 100vw;
       }
 
       /* SOCIAL STYLES */
       .social-link {
-        background: rgba(150, 150, 150, 0.25);
+        background: rgba(150, 150, 150, 0.5);
         color: #00f;
       }
 
       /* BIO STYLES */
+      .bio-wrapper {
+      }
       .bio-box {
         border: 1px solid #00f;
-        font-size: 150%;
-        margin: 10%;
+        font-size: 1em;
         width: 50%;
       }
+      .bio-box h3 {
+        font-size: 1.5em;
+      }
+      .bio-copy {
+        font-size: 1em;
+      }
       .bio-copy a {
-        color: #1e9e2c;
+        color: green;
       }
     </style>
   </head>
   <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/" class="social-link">Link</a>
-      </li>
-    </ul>
+    <div class="full-hero hero-home">
+      <h1>I'm an h1</h1>
+      <ul>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+        <li>
+          <a href="http://example.com/" class="social-link">Link</a>
+        </li>
+      </ul>
+    </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
       <div class="bio-box">
@@ -66,7 +89,7 @@
         </div>
       </div>
       <div class="bio-box">
-        <h3>Lee Donahoe></h3>
+        <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
         <div class="bio-copy">
           <p>
