--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Michael Hartl</h3>
         <a href="http://twitter.com/mhartl" class="social-link">
-          Tw
+          <i class="fab fa-twitter"></i>
         </a>
         <div class="bio-copy">
           <p>
@@ -108,7 +108,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Lee Donahoe</h3>
         <a href="https://twitter.com/leedonahoe" class="social-link">
-          Tw
+          <i class="fab fa-twitter"></i>
         </a>
         <div class="bio-copy">
           <p>
@@ -123,7 +123,7 @@ layout: default
         <img src="http://placekitten.com/g/400/400">
         <h3>Nick Merwin</h3>
         <a href="https://twitter.com/nickmerwin" class="social-link">
-          Tw
+          <i class="fab fa-twitter"></i>
         </a>
         <div class="bio-copy">
           <p>
